--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipywidgets = "*"
 jupyterlab = "*"
 jupyter-contrib-nbextensions = "*"
 schedule = "*"
+autopep8 = "*"
 
 [tool.poetry.dev-dependencies]
 
