--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,18 @@ python = "^3.10"
 pandas = "*"
 plotly = "*"
 tqdm = "*"
-jupyter = "*"
 requests = "*"
+schedule = "*"
+autopep8 = "*"
+kaleido = "0.2.1"
+japanize-matplotlib = "*"
+
+[tool.poetry.group.dev.dependencies]
 flake8 = "*"
 ipywidgets = "*"
 jupyterlab = "*"
 jupyter-contrib-nbextensions = "*"
-schedule = "*"
-autopep8 = "*"
-
-[tool.poetry.dev-dependencies]
+jupyter = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
