--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ jupyterlab = "*"
 jupyter-contrib-nbextensions = "*"
 jupyter = "*"
 
+
+[tool.poetry.group.stubs.dependencies]
+pandas-stubs = "*"
+types-requests = "*"
+types-tqdm = "*"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
