--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,42 @@
-[tool.poetry]
-name = "play_with_misskey"
+[project]
+name = "play-with-misskey"
 version = "0.1.0"
-description = ""
-authors = ["Laplusdestiny <prayonshootingstars@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.10"
-pandas = "*"
-plotly = "*"
-tqdm = "*"
-requests = "*"
-schedule = "*"
-autopep8 = "*"
-kaleido = "0.2.1"
-japanize-matplotlib = "*"
-
-[tool.poetry.group.dev.dependencies]
-flake8 = "*"
-ipywidgets = "*"
-jupyterlab = "*"
-jupyter-contrib-nbextensions = "*"
-jupyter = "*"
-
-
-[tool.poetry.group.stubs.dependencies]
-pandas-stubs = "*"
-types-requests = "*"
-types-tqdm = "*"
+description = "Add your description here"
+authors = [
+    { name = "Laplusdestiny", email = "prayonshootingstars@gmail.com" }
+]
+dependencies = [
+    "pandas>=2.2.2",
+    "plotly>=5.22.0",
+    "tqdm>=4.66.4",
+    "requests>=2.32.3",
+    "schedule>=1.2.2",
+    "ruff>=0.4.8",
+    "kaleido==0.2.1",
+    "japanize-matplotlib>=1.1.3",
+    "ipywidgets>=8.1.3",
+    "pandas-stubs>=2.2.2.240603",
+    "types-requests>=2.32.0.20240602",
+    "types-tqdm>=4.66.0.20240417",
+]
+readme = "README.md"
+requires-python = ">= 3.8"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "ipywidgets>=8.1.3",
+    "pandas-stubs>=2.2.2.240603",
+    "types-requests>=2.32.0.20240602",
+    "types-tqdm>=4.66.0.20240417",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/play_with_misskey"]
